Demos/MSVCPP/Shared_MSVCPP/Sepia2_Lib.h




  // ---  SML 828 functions  --------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SML_DecodeHeadType            (int iHeadType,   char* cHeadType);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SML_GetParameters             (int iDevIdx,     int   iSlotId,  unsigned char* pbPulseMode, int* piHead, unsigned char* pbIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SML_SetParameters             (int iDevIdx,     int   iSlotId,  unsigned char  bPulseMode,               unsigned char  bIntensity);



  // ---  SOM 828 functions  --------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_DecodeFreqTrigMode        (int iDevIdx,     int   iSlotId,  int   iFreqTrigMode, char* cFreqTrigMode);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetFreqTrigMode           (int iDevIdx,     int   iSlotId,  int*  piFreqTrigMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_SetFreqTrigMode           (int iDevIdx,     int   iSlotId,  int   iFreqTrigMode);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetTriggerRange           (int iDevIdx,     int   iSlotId,  int*  piMilliVoltLow, int* piMilliVoltHigh);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetTriggerLevel           (int iDevIdx,     int   iSlotId,  int*  piMilliVolt);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_SetTriggerLevel           (int iDevIdx,     int   iSlotId,  int   iMilliVolt);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetBurstValues            (int iDevIdx,     int   iSlotId,  unsigned char* pbDivider,   unsigned char* pbPreSync,    unsigned char* pbMaskSync);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_SetBurstValues            (int iDevIdx,     int   iSlotId,  unsigned char  bDivider,    unsigned char  bPreSync,     unsigned char  bMaskSync);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetBurstLengthArray       (int iDevIdx,     int   iSlotId,  long* plBurstLen1, long* plBurstLen2, long* plBurstLen3, long* plBurstLen4, long* plBurstLen5, long* plBurstLen6, long* plBurstLen7, long* plBurstLen8);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_SetBurstLengthArray       (int iDevIdx,     int   iSlotId,  long  lBurstLen1,  long  lBurstLen2,  long  lBurstLen3,  long  lBurstLen4,  long  lBurstLen5,  long  lBurstLen6,  long  lBurstLen7,  long  lBurstLen8);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetOutNSyncEnable         (int iDevIdx,     int   iSlotId,  unsigned char* pbOutEnable,  unsigned char* pbSyncEnable, unsigned char* pbSyncInverse);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_SetOutNSyncEnable         (int iDevIdx,     int   iSlotId,  unsigned char  bOutEnable,   unsigned char  bSyncEnable,  unsigned char  bSyncInverse);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_DecodeAUXINSequencerCtrl  (int iAUXInCtrl,  char* cSequencerCtrl);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_GetAUXIOSequencerCtrl     (int iDevIdx,     int   iSlotId,  unsigned char* pbAUXOutCtrl, unsigned char* pbAUXInCtrl);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOM_SetAUXIOSequencerCtrl     (int iDevIdx,     int   iSlotId,  unsigned char  bAUXOutCtrl,  unsigned char  bAUXInCtrl);



  // ---  SOM 828 D functions  --------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_DecodeFreqTrigMode       (int iDevIdx,     int   iSlotId,  int   iFreqTrigIdx, char* cFreqTrigMode);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetFreqTrigMode          (int iDevIdx,     int   iSlotId,  int*  piFreqTrigIdx, unsigned char* pbSynchronize);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetFreqTrigMode          (int iDevIdx,     int   iSlotId,  int   iFreqTrigIdx,  unsigned char   bSynchronize);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetTriggerRange          (int iDevIdx,     int   iSlotId,  int*  piMilliVoltLow, int* piMilliVoltHigh);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetTriggerLevel          (int iDevIdx,     int   iSlotId,  int*  piMilliVolt);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetTriggerLevel          (int iDevIdx,     int   iSlotId,  int   iMilliVolt);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetBurstValues           (int iDevIdx,     int   iSlotId,  unsigned short* pwDivider,   unsigned char* pbPreSync,    unsigned char* pbMaskSync);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetBurstValues           (int iDevIdx,     int   iSlotId,  unsigned short  wDivider,    unsigned char  bPreSync,     unsigned char  bMaskSync);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetBurstLengthArray      (int iDevIdx,     int   iSlotId,  long* plBurstLen1, long* plBurstLen2, long* plBurstLen3, long* plBurstLen4, long* plBurstLen5, long* plBurstLen6, long* plBurstLen7, long* plBurstLen8);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetBurstLengthArray      (int iDevIdx,     int   iSlotId,  long  lBurstLen1,  long  lBurstLen2,  long  lBurstLen3,  long  lBurstLen4,  long  lBurstLen5,  long  lBurstLen6,  long  lBurstLen7,  long  lBurstLen8);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetOutNSyncEnable        (int iDevIdx,     int   iSlotId,  unsigned char* pbOutEnable,  unsigned char* pbSyncEnable, unsigned char* pbSyncInverse);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetOutNSyncEnable        (int iDevIdx,     int   iSlotId,  unsigned char  bOutEnable,   unsigned char  bSyncEnable,  unsigned char  bSyncInverse);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_DecodeAUXINSequencerCtrl (int iAUXInCtrl,  char* cSequencerCtrl);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetAUXIOSequencerCtrl    (int iDevIdx,     int   iSlotId,  unsigned char* pbAUXOutCtrl, unsigned char* pbAUXInCtrl);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetAUXIOSequencerCtrl    (int iDevIdx,     int   iSlotId,  unsigned char  bAUXOutCtrl,  unsigned char  bAUXInCtrl);

  //   
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetSeqOutputInfos        (int iDevIdx,     int   iSlotId,  unsigned char  bSeqOutIdx, unsigned char* pbDelayed, unsigned char* pbForcedUndelayed, unsigned char* pbOutCombi, unsigned char* pbMaskedCombi, double* pf64CoarseDly, unsigned char* pbFineDly); // [double fCoarseDly] : ns
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SetSeqOutputInfos        (int iDevIdx,     int   iSlotId,  unsigned char  bSeqOutIdx, unsigned char  bDelayed,  unsigned char  bOutCombi, unsigned char bMaskedCombi, double fCoarseDly, unsigned char bFineDly);  // [unsigned char bFineDly] : a.u., shouldn't be read as ps
  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_SynchronizeNow           (int iDevIdx,     int   iSlotId);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_DecodeModuleState        (unsigned short wState, char* cStatusText);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetStatusError           (int iDevIdx,     int   iSlotId,  unsigned short* pwState,      short* piErrorCode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetTrigSyncFreq          (int iDevIdx,     int   iSlotId,  unsigned char*  pbFreqStable, unsigned long* pulTrigSyncFreq);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetDelayUnits            (int iDevIdx,     int   iSlotId,  double*      pfCoarseDlyStep, unsigned char* pbFineDlyStepCount); // [double fCoarseDlyStep] : ns
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetFWVersion             (int iDevIdx,     int   iSlotId,  unsigned long*  pulFWVersion);
    
  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_FWReadPage               (int iDevIdx,     int   iSlotId,  unsigned short  iPageIdx, unsigned char* pbFWPage);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_FWWritePage              (int iDevIdx,     int   iSlotId,  unsigned short  iPageIdx, unsigned char* pbFWPage);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SOMD_GetHWParams              (int iDevIdx,     int   iSlotId,  unsigned short* pwHWParTemp1, unsigned short* pwHWParTemp2, unsigned short* pwHWParTemp3, unsigned short* pwHWParVolt1, unsigned short* pwHWParVolt2, unsigned short* pwHWParVolt3, unsigned short* pwHWParVolt4, unsigned short* pwHWParAUX);



  // ---  SWM 828 functions (PPL400)  -----------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_DecodeRangeIdx            (int iDevIdx,     int   iSlotId,  int iRangeIdx, int* iUpperLimit);

  //
  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_GetUIConstants            (int iDevIdx,     int   iSlotId,  unsigned char* bTBNdxCount, unsigned short* wMaxAmplitude, unsigned short* wMaxSlewRate, unsigned short* wExpRampEffect, unsigned short* wMinUserValue, unsigned short* wMaxUserValue, unsigned short* wUserResolution);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_GetCurveParams            (int iDevIdx,     int   iSlotId,  int iCurveIdx, unsigned char* bTBNdx, unsigned short* wPAPml, unsigned short* wRRPml,   unsigned short* wPSPml, unsigned short* wRSPml, unsigned short* wWSPml);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_SetCurveParams            (int iDevIdx,     int   iSlotId,  int iCurveIdx, unsigned char  bTBNdx, unsigned short  wPAPml, unsigned short  wRRPml,   unsigned short  wPSPml, unsigned short  wRSPml, unsigned short  wWSPml);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_GetExtAtten               (int iDevIdx,     int   iSlotId,  float* fExtAtt);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWM_SetExtAtten               (int iDevIdx,     int   iSlotId,  float  fExtAtt);