Demos/MSVCSharp/Shared_MSVCSharp/Sepia2_Lib.cs


    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SML_DecodeHeadType(int iHeadType, StringBuilder cHeadType);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SML_GetParameters(int iDevIdx, int iSlotId, out byte pbPulseMode, out int piHead, out byte pbIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SML_SetParameters(int iDevIdx, int iSlotId, byte bPulseMode, byte bIntensity);


    // ---  SOM 828 functions  --------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_DecodeFreqTrigMode(int iDevIdx, int iSlotId, int iFreqTrigMode, StringBuilder cFreqTrigMode);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetFreqTrigMode(int iDevIdx, int iSlotId, out int piFreqTrigMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_SetFreqTrigMode(int iDevIdx, int iSlotId, int iFreqTrigMode);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetTriggerRange(int iDevIdx, int iSlotId, out int piMilliVoltLow, out int piMilliVoltHigh);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetTriggerLevel(int iDevIdx, int iSlotId, out int piMilliVolt);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_SetTriggerLevel(int iDevIdx, int iSlotId, int iMilliVolt);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetBurstValues(int iDevIdx, int iSlotId, out byte pbDivider, out byte pbPreSync, out byte pbMaskSync);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_SetBurstValues(int iDevIdx, int iSlotId, byte bDivider, byte bPreSync, byte bMaskSync);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetBurstLengthArray(int iDevIdx, int iSlotId, out int plBurstLen1, out int plBurstLen2, out int plBurstLen3, out int plBurstLen4, out int plBurstLen5, out int plBurstLen6, out int plBurstLen7, out int plBurstLen8);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_SetBurstLengthArray(int iDevIdx, int iSlotId, int lBurstLen1, int lBurstLen2, int lBurstLen3, int lBurstLen4, int lBurstLen5, int lBurstLen6, int lBurstLen7, int lBurstLen8);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetOutNSyncEnable(int iDevIdx, int iSlotId, out byte pbOutEnable, out byte pbSyncEnable, out byte pbSyncInverse);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_SetOutNSyncEnable(int iDevIdx, int iSlotId, byte bOutEnable, byte bSyncEnable, byte bSyncInverse);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_DecodeAUXINSequencerCtrl(int iAUXInCtrl, StringBuilder cSequencerCtrl);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_GetAUXIOSequencerCtrl(int iDevIdx, int iSlotId, out byte pbAUXOutCtrl, out byte pbAUXInCtrl);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOM_SetAUXIOSequencerCtrl(int iDevIdx, int iSlotId, byte bAUXOutCtrl, byte bAUXInCtrl);


    // ---  SOM 828 D functions  --------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_DecodeFreqTrigMode(int iDevIdx, int iSlotId, int iFreqTrigIdx, StringBuilder cFreqTrigMode);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetFreqTrigMode(int iDevIdx, int iSlotId, out int piFreqTrigIdx, out byte pbSynchronize);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetFreqTrigMode(int iDevIdx, int iSlotId, int iFreqTrigIdx, byte bSynchronize);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetTriggerRange(int iDevIdx, int iSlotId, out int piMilliVoltLow, out int piMilliVoltHigh);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetTriggerLevel(int iDevIdx, int iSlotId, out int piMilliVolt);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetTriggerLevel(int iDevIdx, int iSlotId, int iMilliVolt);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetBurstValues(int iDevIdx, int iSlotId, out ushort pwDivider, out byte pbPreSync, out byte pbMaskSync);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetBurstValues(int iDevIdx, int iSlotId, ushort wDivider, byte bPreSync, byte bMaskSync);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetBurstLengthArray(int iDevIdx, int iSlotId, out int plBurstLen1, out int plBurstLen2, out int plBurstLen3, out int plBurstLen4, out int plBurstLen5, out int plBurstLen6, out int plBurstLen7, out int plBurstLen8);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetBurstLengthArray(int iDevIdx, int iSlotId, int lBurstLen1, int lBurstLen2, int lBurstLen3, int lBurstLen4, int lBurstLen5, int lBurstLen6, int lBurstLen7, int lBurstLen8);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetOutNSyncEnable(int iDevIdx, int iSlotId, out byte pbOutEnable, out byte pbSyncEnable, out byte pbSyncInverse);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetOutNSyncEnable(int iDevIdx, int iSlotId, byte bOutEnable, byte bSyncEnable, byte bSyncInverse);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_DecodeAUXINSequencerCtrl(int iAUXInCtrl, StringBuilder cSequencerCtrl);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetAUXIOSequencerCtrl(int iDevIdx, int iSlotId, out byte pbAUXOutCtrl, out byte pbAUXInCtrl);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetAUXIOSequencerCtrl(int iDevIdx, int iSlotId, byte bAUXOutCtrl, byte bAUXInCtrl);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetSeqOutputInfos(int iDevIdx, int iSlotId, byte bSeqOutIdx, out byte pbDelayed, out byte pbForcedUndelayed, out byte pbOutCombi, out byte pbMaskedCombi, out double pf64CoarseDly, out byte pbFineDly); // [double fCoarseDly] : ns
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SetSeqOutputInfos(int iDevIdx, int iSlotId, byte bSeqOutIdx, byte bDelayed, byte bOutCombi, byte bMaskedCombi, double fCoarseDly, byte bFineDly);  // [byte bFineDly] : a.u., shouldn't be read as ps
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_SynchronizeNow(int iDevIdx, int iSlotId);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_DecodeModuleState(ushort wState, StringBuilder cStatusText);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetStatusError(int iDevIdx, int iSlotId, out ushort pwState, out short piErrorCode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetTrigSyncFreq(int iDevIdx, int iSlotId, out byte pbFreqStable, out uint pulTrigSyncFreq);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetDelayUnits(int iDevIdx, int iSlotId, out double pfCoarseDlyStep, out byte pbFineDlyStepCount); // [double fCoarseDlyStep] : ns
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetFWVersion(int iDevIdx, int iSlotId, out uint pulFWVersion);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_FWReadPage(int iDevIdx, int iSlotId, ushort iPageIdx, out byte pbFWPage);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_FWWritePage(int iDevIdx, int iSlotId, ushort iPageIdx, out byte pbFWPage);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SOMD_GetHWParams(int iDevIdx, int iSlotId, out ushort pwHWParTemp1, out ushort pwHWParTemp2, out ushort pwHWParTemp3, out ushort pwHWParVolt1, out ushort pwHWParVolt2, out ushort pwHWParVolt3, out ushort pwHWParVolt4, out ushort pwHWParAUX);


    // ---  SWM 828 functions (PPL400)  -----------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWM_DecodeRangeIdx(int iDevIdx, int iSlotId, int iRangeIdx, out int iUpperLimit);
    //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWM_GetUIConstants(int iDevIdx, int iSlotId, out byte bTBNdxCount, out ushort wMaxAmplitude, out ushort wMaxSlewRate, out ushort wExpRampEffect, out ushort wMinUserValue, out ushort wMaxUserValue, out ushort wUserResolution);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWM_GetCurveParams(int iDevIdx, int iSlotId, int iCurveIdx, out byte bTBNdx, out ushort wPAPml, out ushort wRRPml, out ushort wPSPml, out ushort wRSPml, out ushort wWSPml);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWM_SetCurveParams(int iDevIdx, int iSlotId, int iCurveIdx, byte bTBNdx, ushort wPAPml, ushort wRRPml, ushort wPSPml, ushort wRSPml, ushort wWSPml);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWM_GetExtAtten(int iDevIdx, int iSlotId, out float fExtAtt);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWM_SetExtAtten(int iDevIdx, int iSlotId, float fExtAtt);


    // ---  VCL 828 functions (PPL400)  -----------------------------------------
